--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <!-- meta -->
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- links -->
-  <link href="https://fonts.googleapis.com/css?family=Lato:700,900|Montserrat:400,700|Raleway:100,200,300,400,500,600,700" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Lato:700,900|Montserrat:400,700|Raleway:100,200,300,400,500,600,700" rel="stylesheet" /> 
+  <link href="css/styles.css" rel="stylesheet" />
   <!-- title -->
   <title>Quotes</title>
 </head>
 <body>
     <p>Hello</p>
+    <h1>Test 2</h1>
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
