Fix font GreatLakesNF

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- links -->
   <link href="https://fonts.googleapis.com/css?family=Lato:700,900|Montserrat:400,700|Raleway:100,200,300,400,500,600,700" rel="stylesheet" /> 
+  <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
   <link href="css/styles.css" rel="stylesheet" />
   <!-- title -->
   <title>Quotes</title>
