--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
     <p>Hello</p>
-    <h1>Test 2</h1>
+    <div class="container">
+      <h1>Test 2</h1>
+    </div>
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
