--- a/index.html
+++ b/index.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <!-- meta -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- links -->
-  <link href="https://fonts.googleapis.com/css?family=Lato:700,900|Montserrat:400,700|Raleway:100,200,300,400,500,600,700" rel="stylesheet" /> 
-  <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
-  <link href="css/styles.css" rel="stylesheet" />
-  <!-- title -->
-  <title>Quotes</title>
-</head>
-<body>
-    <p>Hello</p>
-    <div class="container">
-      <h1>Test 2</h1>
-    </div>
+  <head>
+    <!-- meta -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- links -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:700,900|Montserrat:400,700|Raleway:100,200,300,400,500,600,700" rel="stylesheet" /> 
+    <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <!-- title -->
+    <title>Quotes</title>
+  </head>
+  <body>
+    <section class="container">
+      <header>
+        <div class="site-main">
+          <a class="site-main-home-link" href="/">Quotes</a>
+          <span>Menu</button>
+        </div>
+        <nav class="hidden">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/">About Us</a></li>
+            <li><a href="/">Categories</a></li>
+            <li><a href="/">Gallery</a></li>
+            <li><a href="/">Events</a></li>
+            <li><a href="/">Blog</a></li>
+            <li><a href="/">Contact Us</a></li>
+          </ul>
+        </nav>  
+      </header>
+      <div>
+        <h1>Smile</h1>
+        <p>It costs you nothing</p>
+      </div>
+      <div>
+
+      </div>
+    </section>
+    <!-- / section header-->
     <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   </body>
