Add style to site main navigation menu button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <div class="site-main">
           <a class="site-main-home-link" href="/">Quotes</a>
-          <span>Menu</button>
+          <span class="site-nav-menu-button">Menu</button>
         </div>
         <nav class="hidden">
           <ul>
