Add style to h1 (.site-hero-heading)

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           </ul>
         </nav>  
       </header>
-      <div>
-        <h1>Smile</h1>
-        <p>It costs you nothing</p>
+      <div class="site-hero">
+        <h1 class="site-hero-heading">Smile</h1>
+        <p class="site-hero-baseline">It costs you nothing</p>
       </div>
       <div>
 
