--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <div class="site-main">
           <a class="site-main-home-link" href="/">Quotes</a>
-          <span class="site-nav-menu-button">Menu</button>
+          <span class="site-nav-menu-button">Menu</span>
         </div>
         <nav class="hidden">
           <ul>
@@ -36,7 +36,13 @@
         <p class="site-hero-baseline">It costs you nothing</p>
       </div>
       <div>
-
+        <ul>
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+          <li>5</li>
+        </ul>
       </div>
     </section>
     <!-- / section header-->
