Add slider (section header)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Quotes</title>
   </head>
   <body>
-    <section class="container">
+    <section class="container slider-img js-slider-img">
       <header>
         <div class="site-main">
           <a class="site-main-home-link" href="/">Quotes</a>
@@ -36,12 +36,12 @@
         <p class="site-hero-baseline">It costs you nothing</p>
       </div>
       <div>
-        <ul>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>5</li>
+        <ul class="slider">
+          <li data-number=0 class="slider-button js-slider-button active"></li>
+          <li data-number=1 class="slider-button js-slider-button"></li>
+          <li data-number=2 class="slider-button js-slider-button"></li>
+          <li data-number=3 class="slider-button js-slider-button"></li>
+          <li data-number=4 class="slider-button js-slider-button"></li>
         </ul>
       </div>
     </section>
