Add style to main menu close button

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <div class="site-main">
           <a class="site-main-home-link" href="/">Quotes</a>
           <span class="site-nav-menu-button">Menu</span>
+          <span class="site-nav-close-button">Close</span>
         </div>
-        <nav class="hidden">
-          <ul>
+        <nav class="site-nav">
+          <ul class="site-nav-links">
             <li><a href="/">Home</a></li>
             <li><a href="/">About Us</a></li>
             <li><a href="/">Categories</a></li>
