Fix responsive style (main menu)

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
       <header>
         <div class="site-main">
           <a class="site-main-home-link" href="/">Quotes</a>
-          <span class="site-nav-menu-button">Menu</span>
-          <span class="site-nav-close-button">Close</span>
+          <span class="site-nav-menu-button js-site-nav-menu-button">Menu</span>
+          <span class="site-nav-close-button js-site-nav-close-button js-hidden">Close</span>
         </div>
-        <nav class="site-nav">
-          <ul class="site-nav-links">
-            <li><a href="/">Home</a></li>
-            <li><a href="/">About Us</a></li>
-            <li><a href="/">Categories</a></li>
-            <li><a href="/">Gallery</a></li>
-            <li><a href="/">Events</a></li>
-            <li><a href="/">Blog</a></li>
-            <li><a href="/">Contact Us</a></li>
+        <nav class="site-nav  js-site-nav js-hidden">
+          <ul class="site-nav-list">
+            <li class="site-nav-list-item"><a class="site-nav-link" href="/">Home</a></li>
+            <li class="site-nav-list-item"><a class="site-nav-link" href="/">About Us</a></li>
+            <li class="site-nav-list-item"><a class="site-nav-link" href="/">Categories</a></li>
+            <li class="site-nav-list-item"><a class="site-nav-link" href="/">Gallery</a></li>
+            <li class="site-nav-list-item"><a class="site-nav-link" href="/">Events</a></li>
+            <li class="site-nav-list-item"><a class="site-nav-link" href="/">Blog</a></li>
+            <li class="site-nav-list-item"><a class="site-nav-link" href="/">Contact Us</a></li>
           </ul>
         </nav>  
       </header>
