--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
       </div>
     </section>
     <!-- / section header-->
+    <section>
+      <h2>The most inclusive <strong>Free PSD Template</strong></h2>
+      <p>Free for commercial and personal use.</p>
+      <p>You can easily edit its contents and code it for yourself or your client!</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget nisi eget iaculis tristique. Alit-quam tincidunt posuere tortor
+        hendrerit elementum. Nunc laoreet lorem a sem auctor fringilla. Pellen-testque dignissim accumsan lobortis. Sed pharetra erat vitae dui
+        imperdiet quis commodo orci dapibus.
+      </p>
+      <p>
+        Cum sociis natoque penatibus et magnis dis parcurient montes, nascetur ridiculus mus. Fusce ar nunc libero. Nam metus
+        lorem, rhoncus ac mattis ornare, blandit vel risus.
+      </p>
+    </section>
+    <!-- / section intro-->
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
