Add style to section intro

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- meta -->
     <meta charset="utf-8" />
@@ -13,7 +13,7 @@
     <title>Quotes</title>
   </head>
   <body>
-    <section class="container slider-img js-slider-img">
+    <section class="container-large slider-img js-slider-img">
       <header>
         <div class="site-main">
           <a class="site-main-home-link" href="/">Quotes</a>
@@ -47,20 +47,23 @@
       </div>
     </section>
     <!-- / section header-->
-    <section>
-      <h2>The most inclusive <strong>Free PSD Template</strong></h2>
-      <p>Free for commercial and personal use.</p>
-      <p>You can easily edit its contents and code it for yourself or your client!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget nisi eget iaculis tristique. Alit-quam tincidunt posuere tortor
+    <section class="container-medium intro">
+      <h2 class="intro-heading">The most inclusive<br/><strong class="intro-heading-strong">Free PSD Template</strong></h2>
+      <p class="intro-baseline">Free for commercial and personal use.<br/>
+        You can easily edit its contents and code it for yourself or your client!</p>
+      <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget nisi eget iaculis tristique. Alit-quam tincidunt posuere tortor
         hendrerit elementum. Nunc laoreet lorem a sem auctor fringilla. Pellen-testque dignissim accumsan lobortis. Sed pharetra erat vitae dui
         imperdiet quis commodo orci dapibus.
       </p>
-      <p>
+      <p class="intro-text intro-text-align">
         Cum sociis natoque penatibus et magnis dis parcurient montes, nascetur ridiculus mus. Fusce ar nunc libero. Nam metus
         lorem, rhoncus ac mattis ornare, blandit vel risus.
       </p>
     </section>
     <!-- / section intro-->
+    <section class="">
+      slider
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
