--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
       </div>
     </section>
-    <!-- / section header-->
+    <!-- / section header -->
     <section class="container-medium intro">
       <h2 class="intro-heading">The most inclusive<br/><strong class="intro-heading-strong">Free PSD Template</strong></h2>
       <p class="intro-baseline">Free for commercial and personal use.<br/>
@@ -60,10 +60,13 @@
         lorem, rhoncus ac mattis ornare, blandit vel risus.
       </p>
     </section>
-    <!-- / section intro-->
+    <!-- / section intro -->
     <section class="">
-      slider
+      <div class="container-large">
+        test
+      </div>
     </section>
+    <!-- / section famous quotes -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
