Add styles to section famous-quotes-slider

--- a/index.html
+++ b/index.html
@@ -61,12 +61,28 @@
       </p>
     </section>
     <!-- / section intro -->
-    <section class="">
-      <div class="container-large">
-        test
+    <section class="famous-quotes">
+      <div class="famous-quotes-image">part two</div>
+      <div class="container-large famous-quotes-container">
+        <div class="famous-quotes-content">
+          <blockquote class="famous-quotes-quote">
+            I love people who make me laugh. I honestly think it's the thing I like most,
+            to laugh. It cures a multitude of ills. It's probably the most important thing in a person.
+          </blockquote>
+          <p class="famous-quotes-name">Audrey Hepburn</p>
+          <ul class="famous-quotes-slider-controls">
+            <li class="famous-quotes-button active"></li>
+            <li class="famous-quotes-button"></li>
+            <li class="famous-quotes-button"></li>
+            <li class="famous-quotes-button"></li>
+          </ul>
+        </div>
       </div>
     </section>
     <!-- / section famous quotes -->
+    <section>
+      reasons to be happy
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
