Add background image (section famous-quotes-slider)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
     <!-- / section intro -->
     <section class="famous-quotes">
-      <div class="famous-quotes-image">part two</div>
+      <div class="famous-quotes-image"></div>
       <div class="container-large famous-quotes-container">
         <div class="famous-quotes-content">
           <blockquote class="famous-quotes-quote">
