Add functionality to slider (famous-quotes-slider)

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
           </blockquote>
           <p class="famous-quotes-name">Audrey Hepburn</p>
           <ul class="famous-quotes-slider-controls">
-            <li class="famous-quotes-button active"></li>
-            <li class="famous-quotes-button"></li>
-            <li class="famous-quotes-button"></li>
-            <li class="famous-quotes-button"></li>
+            <li data-number=0 class="famous-quotes-button active"></li>
+            <li data-number=1 class="famous-quotes-button"></li>
+            <li data-number=2 class="famous-quotes-button"></li>
+            <li data-number=3 class="famous-quotes-button"></li>
           </ul>
         </div>
       </div>
