--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
     </section>
     <!-- / section famous quotes -->
-    <section>
+    <section class="container-large">
       reasons to be happy
     </section>
     <script
