--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
       </div>
     </section>
     <!-- / section famous quotes -->
-    <section class="container-large">
-      reasons to be happy
+    <section class="container-large quotes-movies">
+      <h2>reasons to be happy</h2>
+      <div>
+
+      </div>
     </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
