Create class to style headings H2

--- a/index.html
+++ b/index.html
@@ -81,7 +81,21 @@
     </section>
     <!-- / section famous quotes -->
     <section class="container-large quotes-movies">
-      <h2>reasons to be happy</h2>
+      <!--
+
+        <ul>
+          <li>
+            <div>un</div>
+            <div>deux</div>
+          </li>
+          <li>
+            <div>deux</div>
+            <div>trois</div>
+          </li>
+        </ul>
+
+      -->
+      <h2 class="headingH2">Reasons to be happy</h2>
       <div>
 
       </div>
