quotes from movies (add html mock content and styles)

--- a/index.html
+++ b/index.html
@@ -81,24 +81,40 @@
     </section>
     <!-- / section famous quotes -->
     <section class="container-large quotes-movies">
-      <!--
-
-        <ul>
-          <li>
-            <div>un</div>
-            <div>deux</div>
-          </li>
-          <li>
-            <div>deux</div>
-            <div>trois</div>
-          </li>
-        </ul>
-
-      -->
       <h2 class="headingH2">Reasons to be happy</h2>
+      <ul class="quotes-movies-wrapper">
+        <li class="quotes-movies-item item-0">
+          <h3 class="quotes-movies-title">You are alive</h3>
+          <q class="quotes-movies-quote">Waking up to see another day is a blessing. Don't take it for granted. Make
+            it count and be happy that you're alive
+          </q>
+          <cite class="quotes-movies-movie">Anonymous</cite>
+        </li><!--
+        --><li class="quotes-movies-item item-1">
+          <h3 class="quotes-movies-title">You are alive</h3>
+          <q class="quotes-movies-quote">Waking up to see another day is a blessing. Don't take it for granted. Make
+            it count and be happy that you're alive
+          </q>
+          <cite class="quotes-movies-movie">Anonymous</cite>
+        </li><!--
+        --><li class="quotes-movies-item item-2">
+          <h3 class="quotes-movies-title">You are alive</h3>
+          <q class="quotes-movies-quote">Waking up to see another day is a blessing. Don't take it for granted. Make
+            it count and be happy that you're alive
+          </q>
+          <cite class="quotes-movies-movie">Anonymous</cite>
+        </li><!--
+        --><li class="quotes-movies-item item-3">
+          <h3 class="quotes-movies-title">You are alive</h3>
+          <q class="quotes-movies-quote">Waking up to see another day is a blessing. Don't take it for granted. Make
+            it count and be happy that you're alive
+          </q>
+          <cite class="quotes-movies-movie">Anonymous</cite>
+        </li>
+      </ul>
       <div>
-
-      </div>
+        <button type="button" class="quotes-movies-button js-quotes-movies-button">More Reasons</button>
+      </div>  
     </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
