Fix width of hero-section (remove class .container-large)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Quotes</title>
   </head>
   <body>
-    <section class="container-large slider-img js-slider-img">
+    <section class="hero-section slider-img js-slider-img">
       <header>
         <div class="site-main">
           <a class="site-main-home-link" href="/">Quotes</a>
