Add style to button (section quotes-movies)

--- a/index.html
+++ b/index.html
@@ -112,9 +112,13 @@
           <cite class="quotes-movies-movie">Anonymous</cite>
         </li>
       </ul>
-      <div>
+      <div class="quotes-movies-bottom">
         <button type="button" class="quotes-movies-button js-quotes-movies-button">More Reasons</button>
       </div>  
+    </section>
+    <!-- /section quotes-movies -->
+    <section>
+      section
     </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
