Add ajax call to generate quotes (from famous movies)

--- a/index.html
+++ b/index.html
@@ -81,35 +81,10 @@
     </section>
     <!-- / section famous quotes -->
     <section class="container-large quotes-movies">
-      <h2 class="headingH2">Reasons to be happy</h2>
-      <ul class="quotes-movies-wrapper">
-        <li class="quotes-movies-item item-0">
-          <h3 class="quotes-movies-title">You are alive</h3>
-          <q class="quotes-movies-quote">Waking up to see another day is a blessing. Don't take it for granted. Make
-            it count and be happy that you're alive
-          </q>
-          <cite class="quotes-movies-movie">Anonymous</cite>
-        </li><!--
-        --><li class="quotes-movies-item item-1">
-          <h3 class="quotes-movies-title">You are alive</h3>
-          <q class="quotes-movies-quote">Waking up to see another day is a blessing. Don't take it for granted. Make
-            it count and be happy that you're alive
-          </q>
-          <cite class="quotes-movies-movie">Anonymous</cite>
-        </li><!--
-        --><li class="quotes-movies-item item-2">
-          <h3 class="quotes-movies-title">You are alive</h3>
-          <q class="quotes-movies-quote">Waking up to see another day is a blessing. Don't take it for granted. Make
-            it count and be happy that you're alive
-          </q>
-          <cite class="quotes-movies-movie">Anonymous</cite>
-        </li><!--
-        --><li class="quotes-movies-item item-3">
-          <h3 class="quotes-movies-title">You are alive</h3>
-          <q class="quotes-movies-quote">Waking up to see another day is a blessing. Don't take it for granted. Make
-            it count and be happy that you're alive
-          </q>
-          <cite class="quotes-movies-movie">Anonymous</cite>
+      <h2 class="headingH2">Famous quotes from movies</h2>
+      <ul class="quotes-movies-wrapper"> 
+        <li class="ajax-loader js-ajax-loader">
+          <img src="img/ajax-loader.gif" alt="loader"/>
         </li>
       </ul>
       <div class="quotes-movies-bottom">
