Create file 'quote_of_the_day.scss'

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>  
     </section>
     <!-- /section quotes-movies -->
-    <section>
+    <section class="quote-daily">
       section
     </section>
     <script
