Add html mock content (section quote of the day)

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
     </section>
     <!-- /section quotes-movies -->
     <section class="quote-daily">
-      section
+      <p>
+        I love you for all that you are, all that you've been, and all you're yet to be
+      </p>
     </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
