Fix margin (section quotes movies)

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       </div>  
     </section>
     <!-- /section quotes-movies -->
-    <section class="quote-daily">
-      <p>
+    <section class="quote-daily-section">
+      <p class="quote-daily">
         I love you for all that you are, all that you've been, and all you're yet to be
       </p>
     </section>
