Add html mock content (section quotes of the day)

--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
     </section>
     <!-- /section quotes-movies -->
     <section class="quote-daily-section">
-      <p class="quote-daily">
+      <q class="quote-daily">
         I love you for all that you are, all that you've been, and all you're yet to be
+      </q>
+      <p>
+        Quote of the day, from <a target="_blank "href="https://quotes.rest/#!/quote/get_quote">Quotes REST API</a>
       </p>
     </section>
     <script
