--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@
     </section>
     <!-- /section quotes-movies -->
     <section class="quote-daily-section">
-      <q class="quote-daily">
-        I love you for all that you are, all that you've been, and all you're yet to be
-      </q>
-      <p>
-        Quote of the day, from <a target="_blank "href="https://quotes.rest/#!/quote/get_quote">Quotes REST API</a>
-      </p>
+      <div class="container-large quote-daily-inner">
+        <q class="quote-daily">
+          I love you for all that you are, all that you've been, and all you're yet to be
+        </q>
+        <p class="quote-daily-source">
+          Quote of the day, from <a class="quote-daily-source-link" target="_blank "href="https://quotes.rest/#!/quote/get_quote">Quotes REST API</a>
+        </p>
+      </div>  
     </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
