Add building block to get daily quote via ajax (section quote of the day)

--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
     <section class="quote-daily-section">
       <div class="container-large quote-daily-inner">
         <q class="quote-daily">
-          I love you for all that you are, all that you've been, and all you're yet to be
+        <ul>
+          <li class="ajax-loader js-ajax-loader js-quote-daily-loader quote-daily-loader">
+            <img src="img/ajax-loader.gif" alt="loader"/>
+          </li>
+        </ul>
         </q>
         <p class="quote-daily-source">
           Quote of the day, from <a class="quote-daily-source-link" target="_blank "href="https://quotes.rest/#!/quote/get_quote">Quotes REST API</a>
