Add ajax functionality (section quote of the day)

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </ul>
         </q>
         <p class="quote-daily-source">
-          Quote of the day, from <a class="quote-daily-source-link" target="_blank "href="https://quotes.rest/#!/quote/get_quote">Quotes REST API</a>
+          Quote of the day, from <a class="quote-daily-source-link" target="_blank "href="https://favqs.com/api">FavQs API</a>
         </p>
       </div>  
     </section>
