--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
         </p>
       </div>  
     </section>
+    <!-- /section daily quote -->
+    <section>
+      <h2></h2>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
