Align images (section posters)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Quotes</title>
   </head>
   <body>
-    <section class="hero-section slider-img js-slider-img">
+    <section class="container-large-xl slider-img js-slider-img">
       <header>
         <div class="site-main">
           <a class="site-main-home-link" href="/">Quotes</a>
@@ -93,7 +93,7 @@
     </section>
     <!-- /section quotes-movies -->
     <section class="quote-daily-section">
-      <div class="container-large quote-daily-inner">
+      <div class="container-large-xl quote-daily-inner">
         <q class="quote-daily">
         <ul>
           <li class="ajax-loader js-ajax-loader js-quote-daily-loader quote-daily-loader">
@@ -107,9 +107,38 @@
       </div>  
     </section>
     <!-- /section daily quote -->
-    <section>
-      <h2></h2>
+    <section class="posters">
+      <div class="container-large-xl posters-wrapper">
+        <h2 class="headingH2">Buy Poster Prints</h2>
+        <div class="posters-inner">
+          <div class="posters-content-left">
+            <img class="posters-image" src="img/posters/poster-1.jpeg" alt="poster"/>
+            <div class="posters-extra">
+              <span>Buy Now</span>
+              <span>Share</span>
+            </div>
+          </div><!-- / posters-content-left -->
+          <div class="posters-content-right">
+            <div class="posters-content-right-top">
+              <img class="posters-image" src="img/posters/poster-2.jpg" alt="poster">
+              <div class="posters-extra">
+                <span>Buy Now</span>
+                <span>Share</span>
+              </div>
+            </div>
+            <div class="posters-content-right-bottom">
+              <div class="posters-content-right-bottom-one">
+                <img class="posters-image" src="img/posters/poster-3.jpg" alt="poster">
+              </div>
+              <div class="posters-content-right-bottom-two">
+                <img class="posters-image" src="img/posters/poster-4.jpg" alt="poster">
+              </div>
+            </div>  
+          </div><!-- / posters-content-right -->
+        </div>
+      </div>  
     </section>
+    <!-- / section posters-->
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
