Add html content - posters-extra (section posters)

--- a/index.html
+++ b/index.html
@@ -112,26 +112,42 @@
         <h2 class="headingH2">Buy Poster Prints</h2>
         <div class="posters-inner">
           <div class="posters-content-left">
-            <img class="posters-image" src="img/posters/poster-1.jpeg" alt="poster"/>
-            <div class="posters-extra">
-              <span>Buy Now</span>
-              <span>Share</span>
-            </div>
-          </div><!-- / posters-content-left -->
-          <div class="posters-content-right">
-            <div class="posters-content-right-top">
-              <img class="posters-image" src="img/posters/poster-2.jpg" alt="poster">
+            <div class="posters-content-show-extra">
+              <img class="posters-image" src="img/posters/poster-1.jpeg" alt="poster"/>
               <div class="posters-extra">
                 <span>Buy Now</span>
                 <span>Share</span>
               </div>
             </div>
-            <div class="posters-content-right-bottom">
-              <div class="posters-content-right-bottom-one">
-                <img class="posters-image" src="img/posters/poster-3.jpg" alt="poster">
-              </div>
-              <div class="posters-content-right-bottom-two">
-                <img class="posters-image" src="img/posters/poster-4.jpg" alt="poster">
+          </div><!-- / posters-content-left -->
+          <div class="posters-content-right">
+            <div class="posters-content-right-top">
+              <div class="posters-content-show-extra">
+                <img class="posters-image" src="img/posters/poster-2.jpg" alt="poster">
+                <div class="posters-extra">
+                  <span>Buy Now</span>
+                  <span>Share</span>
+                </div>
+              </div>  
+            </div>
+            <div class="posters-content-right-bottom posters-content-show-extra">
+              <div class="posters-content-right-bottom-one ">
+                <div>
+                  <img class="posters-image" src="img/posters/poster-3.jpg" alt="poster">
+                </div>
+                <div class="posters-extra">
+                  <span>Buy Now</span>
+                  <span>Share</span>
+                </div>
+              </div>  
+              <div class="posters-content-right-bottom-two posters-content-show-extra">
+                <div>
+                  <img class="posters-image" src="img/posters/poster-4.jpg" alt="poster">
+                </div>
+                <div class="posters-extra">
+                  <span>Buy Now</span>
+                  <span>Share</span>
+                </div>
               </div>
             </div>  
           </div><!-- / posters-content-right -->
