Add styles to links (section posters extra)

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <div class="posters-content-show-extra">
               <img class="posters-image" src="img/posters/poster-1.jpeg" alt="poster"/>
               <div class="posters-extra">
-                <span>Buy Now</span>
-                <span>Share</span>
+                  <span><a class="posters-extra-link" href="#">Buy Now</a></span>
+                  <span><a class="posters-extra-link" href="#">Share</a></span>
               </div>
             </div>
           </div><!-- / posters-content-left -->
@@ -125,19 +125,19 @@
               <div class="posters-content-show-extra">
                 <img class="posters-image" src="img/posters/poster-2.jpg" alt="poster">
                 <div class="posters-extra">
-                  <span>Buy Now</span>
-                  <span>Share</span>
+                  <span><a class="posters-extra-link" href="#">Buy Now</a></span>
+                  <span><a class="posters-extra-link" href="#">Share</a></span>
                 </div>
               </div>  
             </div>
-            <div class="posters-content-right-bottom posters-content-show-extra">
-              <div class="posters-content-right-bottom-one ">
+            <div class="posters-content-right-bottom ">
+              <div class="posters-content-right-bottom-one posters-content-show-extra">
                 <div>
                   <img class="posters-image" src="img/posters/poster-3.jpg" alt="poster">
                 </div>
                 <div class="posters-extra">
-                  <span>Buy Now</span>
-                  <span>Share</span>
+                  <span><a class="posters-extra-link" href="#">Buy Now</a></span>
+                  <span><a class="posters-extra-link" href="#">Share</a></span>
                 </div>
               </div>  
               <div class="posters-content-right-bottom-two posters-content-show-extra">
@@ -145,8 +145,8 @@
                   <img class="posters-image" src="img/posters/poster-4.jpg" alt="poster">
                 </div>
                 <div class="posters-extra">
-                  <span>Buy Now</span>
-                  <span>Share</span>
+                  <span><a class="posters-extra-link" href="#">Buy Now</a></span>
+                  <span><a class="posters-extra-link" href="#">Share</a></span>
                 </div>
               </div>
             </div>  
