Add arrow (section posters)

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <img class="posters-image" src="img/posters/poster-1.jpeg" alt="poster"/>
               <div class="posters-extra">
                   <span><a class="posters-extra-link" href="#">Buy Now</a></span>
-                  <span><a class="posters-extra-link" href="#">Share</a></span>
+                  <span><a class="posters-extra-link" href="#">Share</a><span class="arrow"></span></span>
               </div>
             </div>
           </div><!-- / posters-content-left -->
