--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <div class="posters-content-show-extra">
               <img class="posters-image" src="img/posters/poster-1.jpeg" alt="poster"/>
               <div class="posters-extra">
-                  <span><a class="posters-extra-link" href="#">Buy Now</a></span>
-                  <span><a class="posters-extra-link" href="#">Share</a><span class="arrow"></span></span>
+                  <span><a class="posters-extra-link posters-extra-link-buy" href="#">Buy Now</a></span>
+                  <span class="posters-extra-share"><a class="posters-extra-link posters-extra-link-share" href="#">Share</a><span class="arrow"></span></span>
               </div>
             </div>
           </div><!-- / posters-content-left -->
@@ -125,8 +125,8 @@
               <div class="posters-content-show-extra">
                 <img class="posters-image" src="img/posters/poster-2.jpg" alt="poster">
                 <div class="posters-extra">
-                  <span><a class="posters-extra-link" href="#">Buy Now</a></span>
-                  <span><a class="posters-extra-link" href="#">Share</a></span>
+                  <span><a class="posters-extra-link posters-extra-link-buy" href="#">Buy Now</a></span>
+                  <span class="posters-extra-share"><a class="posters-extra-link posters-extra-link-share" href="#">Share</a><span class="arrow"></span></span>
                 </div>
               </div>  
             </div>
@@ -136,8 +136,8 @@
                   <img class="posters-image" src="img/posters/poster-3.jpg" alt="poster">
                 </div>
                 <div class="posters-extra">
-                  <span><a class="posters-extra-link" href="#">Buy Now</a></span>
-                  <span><a class="posters-extra-link" href="#">Share</a></span>
+                  <span><a class="posters-extra-link posters-extra-link-buy" href="#">Buy Now</a></span>
+                  <span class="posters-extra-share"><a class="posters-extra-link posters-extra-link-share" href="#">Share</a><span class="arrow"></span></span>
                 </div>
               </div>  
               <div class="posters-content-right-bottom-two posters-content-show-extra">
@@ -145,8 +145,8 @@
                   <img class="posters-image" src="img/posters/poster-4.jpg" alt="poster">
                 </div>
                 <div class="posters-extra">
-                  <span><a class="posters-extra-link" href="#">Buy Now</a></span>
-                  <span><a class="posters-extra-link" href="#">Share</a></span>
+                  <span><a class="posters-extra-link posters-extra-link-buy" href="#">Buy Now</a></span>
+                  <span class="posters-extra-share"><a class="posters-extra-link posters-extra-link-share" href="#">Share</a><span class="arrow"></span></span>
                 </div>
               </div>
             </div>  
