Fix errors according to W3C validation Service

--- a/index.html
+++ b/index.html
@@ -94,15 +94,19 @@
     <!-- /section quotes-movies -->
     <section class="quote-daily-section">
       <div class="container-large-xl quote-daily-inner">
-        <q class="quote-daily">
-        <ul>
-          <li class="ajax-loader js-ajax-loader js-quote-daily-loader quote-daily-loader">
-            <img src="img/ajax-loader.gif" alt="loader"/>
-          </li>
-        </ul>
-        </q>
+        <div>
+          <q class="quote-daily">
+            <div>
+              <ul>
+                <li class="ajax-loader js-ajax-loader js-quote-daily-loader quote-daily-loader">
+                  <img src="img/ajax-loader.gif" alt="loader"/>
+                </li>
+              </ul>
+            </div>    
+          </q>
+        </div>  
         <p class="quote-daily-source">
-          Quote of the day, from <a class="quote-daily-source-link" target="_blank "href="https://favqs.com/api">FavQs API</a>
+          Quote of the day, from <a class="quote-daily-source-link" target="_blank" href="https://favqs.com/api">FavQs API</a>
         </p>
       </div>  
     </section>
