Code refactor (same button to open and close menu)

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
       <header>
         <div class="site-main">
           <a class="site-main-home-link" href="/">Quotes</a>
-          <span class="site-nav-menu-button js-site-nav-menu-button">Menu</span>
-          <span class="site-nav-close-button js-site-nav-close-button js-hidden">Close</span>
+          <span class="site-nav-menu-button js-site-nav-menu-button site-nav-menu-button closed"></span>
         </div>
-        <nav class="site-nav  js-site-nav js-hidden">
+        <nav class="site-nav js-site-nav js-hidden">
           <ul class="site-nav-list">
             <li class="site-nav-list-item"><a class="site-nav-link" href="/">Home</a></li>
             <li class="site-nav-list-item"><a class="site-nav-link" href="/">About Us</a></li>
