Add font (Tw Cen MT)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- links -->
     <link href="https://fonts.googleapis.com/css?family=Lato:700,900|Montserrat:400,700|Raleway:100,200,300,400,500,600,700" rel="stylesheet" /> 
     <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="fonts/style.css" type="text/css"/>
     <link href="css/styles.css" rel="stylesheet" />
     <!-- title -->
     <title>Quotes</title>
@@ -17,7 +18,7 @@
       <header>
         <div class="site-main">
           <a class="site-main-home-link" href="/">Quotes</a>
-          <span class="site-nav-menu-button js-site-nav-menu-button site-nav-menu-button closed"></span>
+          <span class="site-nav-menu-button js-site-nav-menu-button closed"></span>
         </div>
         <nav class="site-nav js-site-nav js-hidden">
           <ul class="site-nav-list">
@@ -116,6 +117,7 @@
         <div class="posters-inner">
           <div class="posters-content-left">
             <div class="posters-content-show-extra">
+              <span class="posters-content-text-one">Stay<br/>true,<br/>stay<br/> gentleman</span>
               <img class="posters-image" src="img/posters/poster-1.jpeg" alt="poster"/>
               <div class="posters-extra">
                   <span><a class="posters-extra-link posters-extra-link-buy" href="#">Buy Now</a></span>
