Add text (poster number two)

--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
           <div class="posters-content-right">
             <div class="posters-content-right-top">
               <div class="posters-content-show-extra">
+                <div class="posters-content-text-two">
+                  <span class="posters-content-text-two-quote">And muse of nature<br/>with a poet's eye</span><br/>
+                  <span class="posters-content-text-author">Thomas Campbell</span>
+                </div>
                 <img class="posters-image" src="img/posters/poster-2.jpg" alt="poster">
                 <div class="posters-extra">
                   <span><a class="posters-extra-link posters-extra-link-buy" href="#">Buy Now</a></span>
