Add text (poster number three)

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             </div>
             <div class="posters-content-right-bottom ">
               <div class="posters-content-right-bottom-one posters-content-show-extra">
+                <span class="posters-content-text-three">Make work <br/> fun & play</span>
                 <div>
                   <img class="posters-image" src="img/posters/poster-3.jpg" alt="poster">
                 </div>
