Add text (poster number four)

--- a/index.html
+++ b/index.html
@@ -146,11 +146,15 @@
                   <img class="posters-image" src="img/posters/poster-3.jpg" alt="poster">
                 </div>
                 <div class="posters-extra">
-                  <span><a class="posters-extra-link posters-extra-link-buy" href="#">Buy Now</a></span>
+                  <span><a class="posters-extra-link posters-extra-link-buy" href="#">Buy Now</a></span><br/>
                   <span class="posters-extra-share"><a class="posters-extra-link posters-extra-link-share" href="#">Share</a><span class="arrow"></span></span>
                 </div>
               </div>  
               <div class="posters-content-right-bottom-two posters-content-show-extra">
+                <div class="posters-content-text-four">
+                  <span class="posters-content-text-four-top">Silence is</span>
+                  <span class="posters-content-text-four-bottom">Golden</span>
+                </div>
                 <div>
                   <img class="posters-image" src="img/posters/poster-4.jpg" alt="poster">
                 </div>
