--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
           <img src="img/ajax-loader.gif" alt="loader"/>
         </li>
       </ul>
-      <div class="quotes-movies-bottom">
-        <button type="button" class="quotes-movies-button js-quotes-movies-button">More Reasons</button>
+      <div class="call-to-action call-to-action-center">
+        <button type="button" class="call-to-action-button js-quotes-movies-button">More Reasons</button>
       </div>  
     </section>
     <!-- /section quotes-movies -->
@@ -165,6 +165,9 @@
               </div>
             </div>  
           </div><!-- / posters-content-right -->
+        </div>
+        <div class="call-to-action call-to-action-center">
+          <button type="button" class="call-to-action-button">Browse posters</button>
         </div>
       </div>  
     </section>
