--- a/index.html
+++ b/index.html
@@ -171,6 +171,59 @@
         </div>
       </div>  
     </section>
+    <footer>
+      <div class="footer_top">
+        <div class="container-large">
+          nav goes here
+        </div>
+      </div>
+      <div class="footer_bottom">
+        <div class="container-large">
+          <nav>
+            <div>
+              <h3>Browse</h3>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="#">Info</a></li>
+                <li><a href="#">Services</a></li>
+              </ul>
+            </div>
+            <div>
+              <h3>Shop</h3>
+              <ul>
+                <li><a href="#">Account</a></li>
+                <li><a href="#">Help & Guide</a></li>
+                <li><a href="#">Shipping & Returns</a></li>
+                <li><a href="#">FAQs</a></li>
+              </ul>
+            </div>
+            <div>
+              <h3>Contact</h3>
+              <address>
+                Quotes PSD Template<br/>
+                Rudra Street, 12354 Villa<br/>
+                My State - My Country<br/>
+                987658<br/>
+                <br/>
+                Phone: + 01 234 567 890<br/>
+                Fax: + 01 234 567 890<br/>
+                graphicsfuel@gmail.com
+              </address>
+            </div>
+            <div>
+              <h3>Subscibe Now</h3>
+              <p>Get our latest news and product updates daily</p>
+              <form>
+                <input type="email" placeholder="Email Address"/>
+                <button type="submit">Submit</button>
+              </form>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </footer>
     <!-- / section posters-->
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
