Add styles to footer top menu

--- a/index.html
+++ b/index.html
@@ -171,37 +171,32 @@
         </div>
       </div>  
     </section>
-    <footer>
-      <div class="footer_top">
+    <footer class="footer">
+      <div class="footer-top">
         <div class="container-large">
-          nav goes here
-        </div>
-      </div>
-      <div class="footer_bottom">
-        <div class="container-large">
-          <nav>
-            <div>
-              <h3>Browse</h3>
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">Info</a></li>
-                <li><a href="#">Services</a></li>
+          <nav class="secondary-menu">
+            <div class="secondary-menu-block block-browse">
+              <h3 class="headingH3">Browse</h3>
+              <ul class="secondary-menu-list-wrapper">
+                <li><a href="#" class="secondary-menu-text">Home</a></li>
+                <li><a href="#" class="secondary-menu-text">About Us</a></li>
+                <li><a href="#" class="secondary-menu-text">Categories</a></li>
+                <li><a href="#" class="secondary-menu-text">Info</a></li>
+                <li><a href="#" class="secondary-menu-text">Services</a></li>
               </ul>
             </div>
-            <div>
-              <h3>Shop</h3>
-              <ul>
-                <li><a href="#">Account</a></li>
-                <li><a href="#">Help & Guide</a></li>
-                <li><a href="#">Shipping & Returns</a></li>
-                <li><a href="#">FAQs</a></li>
+            <div class="secondary-menu-block block-shop">
+              <h3 class="headingH3">Shop</h3>
+              <ul class="secondary-menu-list-wrapper">
+                <li><a href="#" class="secondary-menu-text">Account</a></li>
+                <li><a href="#" class="secondary-menu-text">Help & Guide</a></li>
+                <li><a href="#" class="secondary-menu-text">Shipping & Returns</a></li>
+                <li><a href="#" class="secondary-menu-text">FAQs</a></li>
               </ul>
             </div>
-            <div>
-              <h3>Contact</h3>
-              <address>
+            <div class="secondary-menu-block block-contact">
+              <h3 class="headingH3 margin-contact">Contact</h3>
+              <address class="secondary-menu-text no-underline secondary-menu-address">
                 Quotes PSD Template<br/>
                 Rudra Street, 12354 Villa<br/>
                 My State - My Country<br/>
@@ -212,15 +207,20 @@
                 graphicsfuel@gmail.com
               </address>
             </div>
-            <div>
-              <h3>Subscibe Now</h3>
-              <p>Get our latest news and product updates daily</p>
+            <div class="secondary-menu-block block-subscribe">
+              <h3 class="headingH3 margin-subscribe">Subscribe Now</h3>
+              <p class="secondary-menu-text no-underline">Get our latest news and product updates daily</p>
               <form>
-                <input type="email" placeholder="Email Address"/>
-                <button type="submit">Submit</button>
+                <input type="email" placeholder="Email Address" class="block-subscribe-input"/>
+                <button type="submit" class="block-subscribe-button">Submit</button>
               </form>
             </div>
           </nav>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="container-large">
+         social media links go here
         </div>
       </div>
     </footer>
