Add responsive style (section footer menu) and create common component overlay

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <!-- /section daily quote -->
     <section class="posters">
       <div class="container-large-xl posters-wrapper">
+        <div class="overlay"></div>
         <h2 class="headingH2">Buy Poster Prints</h2>
         <div class="posters-inner">
           <div class="posters-content-left">
@@ -212,7 +213,7 @@
               <p class="secondary-menu-text no-underline">Get our latest news and product updates daily</p>
               <form>
                 <input type="email" placeholder="Email Address" class="block-subscribe-input"/>
-                <button type="submit" class="block-subscribe-button">Submit</button>
+                <button type="submit" class="call-to-action-button block-subscribe-button">Submit</button>
               </form>
             </div>
           </nav>
